--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Animated Login Form using Html & CSS Only</title>
+  <title>Login</title>
   <link rel="stylesheet" href="./style.css">
   <script>
     function validateLogin() {
@@ -49,7 +49,7 @@
 
         alert("Signup successful!");
 
-        // Redirect to the login page
+       
         window.location.href = "index.html";
       }
     }
